--- a/package.json
+++ b/package.json
@@ -1,22 +1,49 @@
 {
+
     "name": "pixi-startproject",
+
     "version": "1.0.0",
+
     "description": "Dit is een startproject voor het werken met PixiJS, Typescript en OOP. Je kan deze repository downloaden en vervolgens installeren met:",
+
     "scripts": {
-        "start": "parcel src/index.html --dist-dir docs",
-        "build": "parcel build src/index.html --dist-dir docs --public-url ./"
+
+        "start": "parcel src/*.html --dist-dir docs",
+
+        "build": "parcel build src/*.html --dist-dir docs --public-url ./"
+
     },
+
     "keywords": [],
+
     "author": "",
+
     "license": "ISC",
+
     "dependencies": {
+
         "matter-js": "^0.18.0",
-        "pixi.js": "^6.3.0"
+
+        "pixi.js": "^6.4.2"
+
     },
+
     "devDependencies": {
+
+        "@parcel/transformer-sass": "^2.4.0",
+
+        "@types/matter-js": "^0.17.7",
+
         "parcel": "^2.4.0",
+
         "parcel-bundler": "^1.12.5",
+
+        "parcel-reporter-static-files-copy": "^1.3.4",
+
         "querystring-es3": "^0.2.1",
+
         "typescript": "^4.6.2"
+
     }
+
 }
